--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   },
   "homepage": "https://github.com/zscorpio/OpenAI-Tool#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "puppeteer": "^21.0.2"
   }
 }
